<resources>
    <string name="app_name">Twoje zdrowie</string>
    <string name="log_in">Zaloguj się</string>
    <string name="sign_in">Zarejestruj się</string>
    <string name="is_carer">Jestem opiekunem</string>
    <string name="title_activity_choices">Choices</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pressure">Ciśnienie krwi</string>
    <string name="temperature">Temperatura</string>
    <string name="sugar_level">Poziom cukru</string>
    <string name="feeling">Samopoczucie</string>
    <string name="medicines">Leki</string>
    <string name="covid">Koronawirus</string>
    <string name="weight">Waga</string>
    <string name="notifications">Powiadomienia</string>
    <string name="sos">SOS</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_asd">asd</string>
    <string name="title_activity_settings">Ustawienia</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">Zapisz</string>
    <string name="select_date">Wybierz datę</string>
</resources>